# sing-box-subscribe

./: Pipfile  gh_proxy_helper.py  main.py  providers.json  pyproject.toml  requirements.txt  tool.py  vercel.json
api/: app.py  index.py
config_template/: allow-lan.json  config1.13.json  config1.13_metarules.json  config1.14.json  configFL.json  configfakeipER.json  configfakeipFL.json
parsers/: anytls.py  clash2base64.py  clash2sing.py  hysteria2.py  ss.py  vless.py
templates/: index.html
